[package]
name = "crawler"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[[bin]]
name = "crwlr"
path = "src/main.rs"

[dependencies]
openssl-sys = "*"
reqwest = "0.9.17"
scraper = "0.10.0"
url = "1.7.2"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]